Implementado Methods DELETE